# bricks

./: README.md  pyproject.toml
.github/workflows/: code_quality.yml
src/: __init__.py  bricks.py  element.py  elements.py  html_elements.py  main.py  standard_elements.py
tests/: test_element.py
