[project]
name = "bricks"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "JimLundin", email = "jimeriklundin@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
hello = "bricks:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bricks"]
